--- a/project_2/report/acronyms.tex
+++ b/project_2/report/acronyms.tex
@@ -72,3 +72,5 @@
 \newacronym{RTC}{RTC}{Real-Time Clock}
 \newacronym{TCP}{TCP}{Transmission Control Protocol}
 \newacronym{PAN ID}{PAN ID}{Personal Area Network Identifier}
+\newacronym{ID}{ID}{Identifier}
+\newacronym{SSL}{SSL}{Secure Sockets Layer}
