--- a/project_2/report/main.tex
+++ b/project_2/report/main.tex
@@ -42,4 +42,10 @@
 \nocite{*}
 \printbibliography[title={Bibliography}, heading=bibnumbered]
 
+\begin{appendices}
+\include{files/A-Devices}
+\include{files/B-ThingSpeak}
+\include{files/C-Application}
+\end{appendices}
+
 \end{document}
