--- a/project_2/report/references.bib
+++ b/project_2/report/references.bib
@@ -26,3 +26,11 @@
   abstract = {channels/{$<$}channelID{$>$}/subscribe/fields/field{$<$}fieldnumber{$>$} subscribes to updates from a single field of a channel feed.},
   langid = {english}
 }
+
+@online{IoTMQTTPanel,
+  title = {IoT MQTT Panel - Aplicaciones en Google Play},
+  url = {https://play.google.com/store/apps/details?id=snr.lab.iotmqttpanel.prod&hl=es},
+  urldate = {2026-02-11},
+  abstract = {IO remoto para el hogar inteligente basado en Protocolo MQTT.},
+  langid = {spanish}
+}
